name:                haskell-tools-daemon
version:             1.1.0.2
synopsis:            Background process for Haskell-tools that editors can connect to.
description:         Background process for Haskell-tools that provides a way to use the tools on a
                     whole project. It also makes it possible to use the tools on the project in a
                     session, reloading modules when needed. The daemon library is independent of
                     the actual set of tools, and takes them as a parameter, so the system can be
                     easily extended by creating a simple new Main module.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/Project/has-cabal/*.hs
                  , examples/Project/has-cabal/*.cabal
                  , examples/Project/changing-cabal/*.hs
                  , examples/Project/changing-cabal/*.cabal
                  , examples/Project/has-th/*.hs
                  , examples/Project/hs-boots/*.hs
                  , examples/Project/hs-boots/*.hs-boot
                  , examples/Project/multi-packages/package1/*.hs
                  , examples/Project/multi-packages/package1/*.cabal
                  , examples/Project/multi-packages/package2/*.hs
                  , examples/Project/multi-packages/package2/*.cabal
                  , examples/Project/multi-packages-dependent/package1/*.hs
                  , examples/Project/multi-packages-dependent/package1/*.cabal
                  , examples/Project/multi-packages-dependent/package2/*.hs
                  , examples/Project/multi-packages-dependent/package2/*.cabal
                  , examples/Project/multi-packages-flags/package1/*.hs
                  , examples/Project/multi-packages-flags/package1/*.cabal
                  , examples/Project/multi-packages-flags/package2/*.hs
                  , examples/Project/multi-packages-flags/package2/*.cabal
                  , examples/Project/no-cabal/*.hs
                  , examples/Project/reloading/*.hs
                  , examples/Project/selection/*.hs
                  , examples/Project/simple-refactor/*.hs
                  , examples/Project/simple-refactor/*.cabal
                  , examples/Project/source-dir/*.cabal
                  , examples/Project/source-dir/src/*.hs
                  , examples/Project/source-dir-outside/*.cabal
                  , examples/Project/src/*.hs
                  , examples/Project/th-added-later/package1/*.hs
                  , examples/Project/th-added-later/package1/*.cabal
                  , examples/Project/th-added-later/package2/*.hs
                  , examples/Project/th-added-later/package2/*.cabal
                  , examples/Project/load-error/*.hs
                  , examples/Project/source-error/*.hs
                  , examples/Project/empty/*.hs
                  , examples/Project/additional-files/*.hs
                  , examples/Project/additional-files/*.cabal
                  , examples/Project/paths-codegen/dist/build/autogen/cabal_macros.h
                  , examples/Project/paths-codegen/dist/build/autogen/Paths_some_test_package.hs
                  , examples/Project/paths-codegen/*.hs
                  , examples/Project/paths-codegen/*.cabal
                  , examples/Project/paths-module/dist/build/autogen/cabal_macros.h
                  , examples/Project/paths-module/dist/build/autogen/Paths_some_test_package.hs
                  , examples/Project/paths-module/*.hs
                  , examples/Project/paths-module/*.cabal
                  , examples/Project/cabal-sandbox/*.hs
                  , examples/Project/cabal-sandbox/*.cabal
                  , examples/Project/cabal-sandbox/groups-0.4.0.0/LICENSE
                  , examples/Project/cabal-sandbox/groups-0.4.0.0/Setup.hs
                  , examples/Project/cabal-sandbox/groups-0.4.0.0/groups.cabal
                  , examples/Project/cabal-sandbox/groups-0.4.0.0/src/Data/Group.hs
                  , examples/Project/unused-mod/*.hs
                  , examples/Project/unused-mod/*.cabal
                  , examples/Project/same-module-in-two-mod-coll/*.hs
                  , examples/Project/same-module-in-two-mod-coll/*.cabal
                  , examples/Project/exposed-mod-as-main/*.hs
                  , examples/Project/exposed-mod-as-main/*.cabal
                  , examples/Project/th-imports-normal/*.hs
                  , examples/Project/has-ghc/*.hs
                  , examples/Project/has-ghc/*.cabal
                  , examples/Project/incomplete-cabal/*.hs
                  , examples/Project/incomplete-cabal/*.cabal
                  , examples/Project/two-modules/*.hs
                  , examples/Project/two-modules/*.cabal
                  , examples/Project/load-error-multi/*.hs
                  , examples/Project/th-typecheck/*.hs
                  , examples/Project/code-gen/*.hs
                  , examples/Project/code-gen/*.cabal
                  , examples/Project/warning/*.hs

library
  build-depends:       base                      >= 4.9   && < 5.0
                     , aeson                     >= 1.0   && < 1.5
                     , bytestring                >= 0.10  && < 1.0
                     , deepseq                   >= 1.4   && < 2.0
                     , filepath                  >= 1.4   && < 2.0
                     , strict                    >= 0.3   && < 0.4
                     , containers                >= 0.5   && < 0.6
                     , mtl                       >= 2.2   && < 2.3
                     , split                     >= 0.2   && < 1.0
                     , directory                 >= 1.2   && < 1.4
                     , process                   >= 1.6   && < 1.7
                     , ghc                       >= 8.4   && < 8.5
                     , ghc-paths                 >= 0.1   && < 0.2
                     , references                >= 0.3.2 && < 1.0
                     , network                   >= 2.6   && < 2.8
                     , Diff                      >= 0.3   && < 0.4
                     , Cabal                     >= 2.0   && < 2.3
                     , pretty                    >= 1.1   && < 1.2
                     , optparse-applicative      >= 0.14  && < 0.15
                     , template-haskell          >= 2.13  && < 2.14
                     , haskell-tools-prettyprint >= 1.1   && < 1.2
                     , haskell-tools-refactor    >= 1.1   && < 1.2
                     , haskell-tools-builtin-refactorings >= 1.1   && < 1.2
                     , fswatch                   >= 0.1   && < 0.2

  exposed-modules:     Language.Haskell.Tools.Daemon
                     , Language.Haskell.Tools.Daemon.Session
                     , Language.Haskell.Tools.Daemon.ModuleGraph
                     , Language.Haskell.Tools.Daemon.GetModules
                     , Language.Haskell.Tools.Daemon.MapExtensions
                     , Language.Haskell.Tools.Daemon.Representation
                     , Language.Haskell.Tools.Daemon.Utils
                     , Language.Haskell.Tools.Daemon.State
                     , Language.Haskell.Tools.Daemon.PackageDB
                     , Language.Haskell.Tools.Daemon.Mode
                     , Language.Haskell.Tools.Daemon.Protocol
                     , Language.Haskell.Tools.Daemon.Update
                     , Language.Haskell.Tools.Daemon.Watch
                     , Language.Haskell.Tools.Daemon.Options
                     , Language.Haskell.Tools.Daemon.ErrorHandling
                     , Paths_haskell_tools_daemon
  default-language:    Haskell2010


executable ht-daemon
  ghc-options:         -rtsopts
  build-depends:       base                      >= 4.9 && < 5.0
                     , haskell-tools-daemon
                     , directory                 >= 1.2 && < 1.4
                     , filepath                  >= 1.4 && < 2.0
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010

test-suite haskell-tools-daemon-tests
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2.5g
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base                      >= 4.11 && < 4.12
                     , HUnit                     >= 1.5  && < 1.7
                     , ghc                       >= 8.4  && < 8.5
                     , tasty                     >= 0.11 && < 1.2
                     , tasty-hunit               >= 0.9  && < 0.11
                     , directory                 >= 1.2  && < 1.4
                     , process                   >= 1.6  && < 1.7
                     , filepath                  >= 1.4  && < 2.0
                     , bytestring                >= 0.10 && < 0.11
                     , network                   >= 2.6  && < 2.8
                     , aeson                     >= 1.0  && < 1.5
                     , Glob                      >= 0.9  && < 0.10
                     , haskell-tools-daemon
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
  default-language:    Haskell2010
