name:                haskell-tools-debug
version:             0.1.3.0
synopsis:            Debugging Tools for Haskell-tools
description:         Debugging Tools for Haskell-tools
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.Debug
  other-modules:       Language.Haskell.Tools.DebugGhcAST
                     , Language.Haskell.Tools.RangeDebug
                     , Language.Haskell.Tools.RangeDebug.Instances
  build-depends:       base                      >=4.9 && <5.0
                     , ghc                       >=8.0 && <8.1
                 --    , mtl                       >=2.2 && <2.3
                 --    , uniplate                  >=1.6 && <1.7
                     , ghc-paths                 >=0.1 && <0.2
                 --    , containers                >=0.5 && <0.6
                 --    , directory                 >=1.2 && <1.3
                 --    , transformers              >=0.5 && <0.6
                     , references                >=0.3.2 && <1.0
                 --    , split                     >=0.2 && <1.0
                 --    , filepath                  >=1.4 && <2.0
                     , haskell-tools-ast         >=0.1.3 && <0.2
                     , haskell-tools-ast-fromghc >=0.1.3 && <0.2
                     , haskell-tools-ast-trf     >=0.1.3 && <0.2
                     , haskell-tools-refactor    >=0.1.3 && <0.2
                     , haskell-tools-prettyprint >=0.1.3 && <0.2
                 --    , template-haskell          >=2.0 && <3.0
                 --    , Cabal                     >=1.24 && <2.0
  default-language:    Haskell2010
  