name:                haskell-tools-debug
version:             0.4.1.0
synopsis:            Debugging Tools for Haskell-tools
description:         Debugging Tools for Haskell-tools
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -O2
  exposed-modules:     Language.Haskell.Tools.Debug
  other-modules:       Language.Haskell.Tools.DebugGhcAST
                     , Language.Haskell.Tools.RangeDebug
                     , Language.Haskell.Tools.RangeDebug.Instances
  build-depends:       base                      >= 4.9 && < 4.10
                     , references                >= 0.3 && < 0.4
                     , ghc                       >= 8.0 && < 8.1
                     , ghc-paths                 >= 0.1 && < 0.2
                     , haskell-tools-ast         >= 0.4 && < 0.5
                     , haskell-tools-backend-ghc >= 0.4 && < 0.5
                     , haskell-tools-refactor    >= 0.4 && < 0.5
                     , haskell-tools-prettyprint >= 0.4 && < 0.5
  default-language:    Haskell2010
  