name:                haskell-tools-debug
version:             1.1.0.2
synopsis:            Debugging Tools for Haskell-tools
description:         Debugging Tools for Haskell-tools
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Tools.Debug
  other-modules:       Language.Haskell.Tools.Debug.DebugGhcAST
                     , Language.Haskell.Tools.Debug.Show
                     , Language.Haskell.Tools.Debug.RangeDebug
                     , Language.Haskell.Tools.Debug.RangeDebugInstances
  build-depends:       base                      >= 4.11 && < 4.12
                     , filepath                  >= 1.4 && < 1.5
                     , template-haskell          >= 2.13 && < 2.14
                     , references                >= 0.3 && < 0.4
                     , split                     >= 0.2 && < 0.3
                     , ghc                       >= 8.4 && < 8.5
                     , ghc-paths                 >= 0.1 && < 0.2
                     , haskell-tools-ast         >= 1.1 && < 1.2
                     , haskell-tools-backend-ghc >= 1.1 && < 1.2
                     , haskell-tools-refactor    >= 1.1 && < 1.2
                     , haskell-tools-prettyprint >= 1.1 && < 1.2
                     , haskell-tools-builtin-refactorings >= 1.1 && < 1.2
                     , uniplate                  >= 1.6 && < 1.7
                     , classyplate               >= 0.3 && < 0.4
                     , criterion                 >= 1.1 && < 1.6
                     , mtl                       >= 2.2 && < 2.3
  default-language:    Haskell2010

executable ht-debug
  build-depends:       base                      >= 4.9 && < 5.0
                     , haskell-tools-debug
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
