name:                haskell-tools-experimental-refactorings
version:             1.0.1.0
synopsis:            Refactoring Tool for Haskell
description:         Contains experimental refactorings implemented in the Haskell-tools framework for tutorial purposes, or to be added later to the set of mature refactorings.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: examples/Refactor/DataToNewtype/*.hs
                  , examples/Refactor/DollarApp/*.hs
                  , examples/Refactor/IfToGuards/*.hs

library
  exposed-modules:     Language.Haskell.Tools.Refactor.Builtin.DataToNewtype
                     , Language.Haskell.Tools.Refactor.Builtin.IfToGuards
                     , Language.Haskell.Tools.Refactor.Builtin.DollarApp
                     , Language.Haskell.Tools.Refactor.Builtin.HelloRefactor
                     , Language.Haskell.Tools.Refactor.Builtin.DollarApp1
                     , Language.Haskell.Tools.Refactor.Builtin.DollarApp2
                     , Language.Haskell.Tools.Refactor.Builtin.DollarApp3
                     , Language.Haskell.Tools.Refactor.Builtin.FindUnused

  build-depends:       base                      >= 4.10  && < 4.11
                     , mtl                       >= 2.2  && < 2.3
                     , uniplate                  >= 1.6  && < 1.7
                     , ghc-paths                 >= 0.1  && < 0.2
                     , containers                >= 0.5  && < 0.6
                     , directory                 >= 1.2  && < 1.4
                     , transformers              >= 0.5  && < 0.6
                     , references                >= 0.3  && < 0.4
                     , split                     >= 0.2  && < 0.3
                     , filepath                  >= 1.4  && < 1.5
                     , template-haskell          >= 2.12 && < 2.13
                     , ghc                       >= 8.2  && < 8.3
                     , Cabal                     >= 2.0 && < 2.1
                     , haskell-tools-ast         >= 1.0  && < 1.1
                     , haskell-tools-backend-ghc >= 1.0  && < 1.1
                     , haskell-tools-rewrite     >= 1.0  && < 1.1
                     , haskell-tools-prettyprint >= 1.0  && < 1.1
                     , haskell-tools-refactor    >= 1.0  && < 1.1
  default-language:    Haskell2010

test-suite haskell-tools-experimental-refactorings-test
  type:                exitcode-stdio-1.0
  ghc-options:         -with-rtsopts=-M2g
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base                      >= 4.10  && < 4.11
                     , tasty                     >= 0.11 && < 1.1
                     , tasty-hunit               >= 0.9 && < 0.11
                     , transformers              >= 0.5  && < 0.6
                     , either                    >= 4.4  && < 5.1
                     , filepath                  >= 1.4  && < 1.5
                     , mtl                       >= 2.2  && < 2.3
                     , uniplate                  >= 1.6  && < 1.7
                     , containers                >= 0.5  && < 0.6
                     , directory                 >= 1.2  && < 1.4
                     , references                >= 0.3  && < 0.4
                     , split                     >= 0.2  && < 0.3
                     , time                      >= 1.6  && < 1.9
                     , template-haskell          >= 2.12 && < 2.13
                     , ghc                       >= 8.2  && < 8.3
                     , ghc-paths                 >= 0.1  && < 0.2
                     , Cabal                     >= 2.0 && < 2.1
                     , haskell-tools-ast         >= 1.0  && < 1.1
                     , haskell-tools-backend-ghc >= 1.0  && < 1.1
                     , haskell-tools-rewrite     >= 1.0  && < 1.1
                     , haskell-tools-prettyprint >= 1.0  && < 1.1
                     , haskell-tools-refactor    >= 1.0  && < 1.1
                     , haskell-tools-experimental-refactorings
  default-language:    Haskell2010
