name:                haskell-tools-prettyprint
version:             1.1.1.0
synopsis:            Pretty printing of Haskell-Tools AST
description:         Converts the Haskell-Tools AST to text. Prepares the AST for this conversion. If the AST was created from the GHC AST this pretty printing will result in the original source code. Generated AST parts will get the default formatting. Works using the source annotations that are present in the AST. Creates a rose tree first to simplify the conversion.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -O2
  exposed-modules:     Language.Haskell.Tools.PrettyPrint
                     , Language.Haskell.Tools.PrettyPrint.Prepare
  other-modules:       Language.Haskell.Tools.PrettyPrint.RoseTree
                     , Language.Haskell.Tools.PrettyPrint.Prepare.RangeToRangeTemplate
                     , Language.Haskell.Tools.PrettyPrint.Prepare.RangeTemplateToSourceTemplate
                     , Language.Haskell.Tools.PrettyPrint.Prepare.RangeTemplate
                     , Language.Haskell.Tools.PrettyPrint.Prepare.SourceTemplate
                     , Language.Haskell.Tools.PrettyPrint.Prepare.SourceTemplateHelpers
                     , Language.Haskell.Tools.PrettyPrint.Prepare.PlaceComments
  build-depends:       base              >= 4.11  && < 4.13
                     , mtl               >= 2.2  && < 2.3
                     , containers        >= 0.5  && < 0.7
                     , references        >= 0.3  && < 0.4
                     , uniplate          >= 1.6  && < 1.7
                     , split             >= 0.2  && < 0.3
                     , text              >= 1.2  && < 1.3
                     , ghc               >= 8.4  && < 8.7
                     , haskell-tools-ast >= 1.1  && < 1.2
  default-language: Haskell2010
