name:                haskell-tools-refactor
version:             1.0.0.0
synopsis:            Refactoring Tool for Haskell
description:         Contains a set of refactorings based on the Haskell-Tools framework to easily transform a Haskell program. For the descriptions of the implemented refactorings, see the homepage.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -O2
  exposed-modules:     Language.Haskell.Tools.Refactor
                     , Language.Haskell.Tools.Refactor.Utils.BindingElem
                     , Language.Haskell.Tools.Refactor.Utils.Monadic
                     , Language.Haskell.Tools.Refactor.Monad
                     , Language.Haskell.Tools.Refactor.Representation
                     , Language.Haskell.Tools.Refactor.Prepare
                     , Language.Haskell.Tools.Refactor.Utils.Lists
                     , Language.Haskell.Tools.Refactor.Utils.Name
                     , Language.Haskell.Tools.Refactor.Utils.Helpers
                     , Language.Haskell.Tools.Refactor.Utils.AST
                     , Language.Haskell.Tools.Refactor.Refactoring
                     , Language.Haskell.Tools.Refactor.Utils.Indentation
                     , Language.Haskell.Tools.Refactor.Utils.Extensions

  build-depends:       base                      >= 4.10  && < 4.11
                     , mtl                       >= 2.2  && < 2.3
                     , uniplate                  >= 1.6  && < 1.7
                     , ghc-paths                 >= 0.1  && < 0.2
                     , containers                >= 0.5  && < 0.6
                     , directory                 >= 1.2  && < 1.4
                     , transformers              >= 0.5  && < 0.6
                     , references                >= 0.3  && < 0.4
                     , split                     >= 0.2  && < 0.3
                     , filepath                  >= 1.4  && < 1.5
                     , template-haskell          >= 2.12 && < 2.13
                     , ghc                       >= 8.2  && < 8.3
                     , Cabal                     >= 2.0 && < 2.1
                     , haskell-tools-ast         >= 1.0  && < 1.1
                     , haskell-tools-backend-ghc >= 1.0  && < 1.1
                     , haskell-tools-rewrite     >= 1.0  && < 1.1
                     , haskell-tools-prettyprint >= 1.0  && < 1.1
  default-language:    Haskell2010
