name:                haskell-tools-require
version:             0.1.3.0
synopsis:            All the requirements of the haskell-tools packages for caching.
description:         All the requirements of the haskell-tools packages for caching.

homepage:            https://github.com/nboldi/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
  other-modules:       
  build-depends:       base                 >=4.9   && <5.0
                     , ghc                  >=8.0   && <8.1
                     , mtl                  >=2.2   && <2.3
                     , containers           >=0.5   && <0.6
                     , references           >=0.3.2 && <1.0
                     , uniplate             >=1.6   && <2.0
                     , bytestring           >=0.10  && <1.0
                     , safe                 >=0.3   && <1.0
                     , uniplate             >=1.6   && <2.0
                     , split                >=0.2   && <0.3
                     , template-haskell     >=2.11  && <3.0
                     , MissingH             >=1.3   && <2.0
                     , ghc-paths            >=0.1   && <0.2
                     , directory            >=1.2   && <1.3
                     , transformers         >=0.5   && <0.6
                     , time                 >=1.5   && <2.0
                     , filepath             >=1.4   && <2.0
                     , either               >=4.0   && <5.0
                     , HUnit                >=1.3   && <2.0
                     , hpc-coveralls        >=1.0   && <2.0
                     , polyparse            >=1.0   && <2.0
  default-language:    Haskell2010