name:                some-test-package
version:             1.2.3.4
synopsis:            A package just for testing Haskell-tools support. Don't install it.
description:         

homepage:            https://github.com/nboldi/haskell-tools
license:             BSD3
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     UseGroups
  build-depends:       base
                     , groups
  default-language:    Haskell2010