name:                some-test-package
version:             1.2.3.4
synopsis:            A package just for testing Haskell-tools support. Don't install it.
description:

homepage:            https://github.com/nboldi/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     A
  build-depends:       base
  default-language:    Haskell2010

executable some-executable
  build-depends:       base
  ghc-options:         -main-is=A
  main-is:             A.hs
  default-language:    Haskell2010
