name:                groups
version:             0.4.0.0
synopsis:            Haskell 98 groups
description:         
  Haskell 98 groups. A group is a monoid with invertibility.
license:             BSD3
license-file:        LICENSE
author:              Nathan "Taneb" van Doorn
maintainer:          nvd1234@gmail.com
copyright:           Copyright (C) 2013 Nathan van Doorn
category:            Algebra, Data, Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Group
  -- other-modules:       
  build-depends:       base <5
  hs-source-dirs:      src
